# lbfi

./: .gitignore  LICENSE  README.md  lbfi.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-test.yml
src/: lbfi.py
test/: test.py
