[tool.poetry]
name = "lbfi"
version = "0.1.6"
description = "lbfi stands for Linux Bangla Font Installer. You can avail the fonts for your linux desktop easily with this tool."
authors = ["fahadahammed <iamfahadahammed@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
poetry = "^1.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lbfi='src.lbfi:cli'